@@ -1,3 +1,9 @@
+2008-09-08  Jonh Wendell <jwendell@gnome.org>
+
+	* configure.ac: bump gtk-vnc dependency to 0.3.7
+	* src/vinagre-tab.c: Removed ugly hacks related to key press. New
+	gtk-vnc handles this correctly.
+
 2008-09-01  Jonh Wendell <jwendell@gnome.org>
 
 	* configure.ac: post-release bump to 2.23.92
